Deprecated call Class.newInstance()